--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </ul>
 
         <h2>Contact</h2>
-        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/yourprofile/">LinkedIn</a> or via <a href="mailto:youremail@example.com">email</a>.</p>
+        <p>Feel free to connect with me on <a href="www.linkedin.com/in/ganesh-bhatkar-7a52a8143">LinkedIn</a> or via <a href="mailto:gsbhatkar@gmail.com">email</a>.</p>
     </section>
 </body>
 </html>
