--- a/index.html
+++ b/index.html
@@ -1,59 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Robotics Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-        }
-        section {
-            padding: 2rem;
-            max-width: 800px;
-            margin: auto;
-            background: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2 {
-            text-align: center;
-        }
-        a {
-            color: #007BFF;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Welcome to My Robotics Portfolio</h1>
-    </header>
-    <section>
-        <h2>About Me</h2>
-        <p>I'm a robotics enthusiast specializing in computer vision, SLAM, and autonomous systems. I love learning through projects and building innovative solutions.</p>
-
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="https://github.com/username/edge-detection">Edge Detection and Filtering</a> - Learn edge detection with OpenCV.</li>
-            <li><a href="https://github.com/username/object-tracking">Object Tracking</a> - Real-time object detection and tracking.</li>
-            <li><a href="https://github.com/username/depth-mapping">Depth Mapping</a> - Generate depth maps from stereo images.</li>
-        </ul>
-
-        <h2>Contact</h2>
-        <p>Feel free to connect with me on <a href="www.linkedin.com/in/ganesh-bhatkar-7a52a8143">LinkedIn</a> or via <a href="mailto:gsbhatkar@gmail.com">email</a>.</p>
-    </section>
-</body>
-</html>
+<header>
+    <h1>Welcome to My Robotics Portfolio</h1>
+    <nav>
+        <a href="#about">About</a> | 
+        <a href="#projects">Projects</a> | 
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+<section id="about">
+    <h2>About Me</h2>
+    <p>I'm a robotics enthusiast specializing in computer vision, SLAM, and autonomous systems. I love learning through projects and building innovative solutions.</p>
+</section>
+<section id="projects">
+    <h2>Projects</h2>
+    <ul>
+        <li><a href="https://github.com/username/edge-detection">Edge Detection and Filtering</a> - Learn edge detection with OpenCV.</li>
+        <li><a href="https://github.com/username/object-tracking">Object Tracking</a> - Real-time object detection and tracking.</li>
+        <li><a href="https://github.com/username/depth-mapping">Depth Mapping</a> - Generate depth maps from stereo images for robot perception.</li>
+    </ul>
+</section>
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/ganesh-bhatkar-7a52a8143">LinkedIn</a> or via <a href="mailto:gsbhatkar@gmail.com">email</a>.</p>
+</section>
+<footer>
+    <p>&copy; 2024 Your Name. All Rights Reserved.</p>
+</footer>
