--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
-<header>
-    <h1>Welcome to My Robotics Portfolio</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Robotics Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Robotics Portfolio</h1>
+    </header>
+    <section>
+        <h2>About Me</h2>
+        <p>I'm a robotics enthusiast specializing in computer vision, SLAM, and autonomous systems. I enjoy learning through hands-on projects and building innovative solutions.</p>
 
-</header>
-<section id="about">
-    <h2>About Me</h2>
-    <p>I'm a robotics enthusiast specializing in computer vision, SLAM, and autonomous systems. I love learning through projects and building innovative solutions.</p>
-</section>
-<section id="projects">
-    <h2>Projects</h2>
-    <ul>
-        <li><a href="https://github.com/username/edge-detection">Edge Detection and Filtering</a> - Learn edge detection with OpenCV.</li>
-        <li><a href="https://github.com/username/object-tracking">Object Tracking</a> - Real-time object detection and tracking.</li>
-        <li><a href="https://github.com/username/depth-mapping">Depth Mapping</a> - Generate depth maps from stereo images for robot perception.</li>
-    </ul>
-</section>
-<section id="contact">
-    <h2>Contact</h2>
-    <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/ganesh-bhatkar-7a52a8143">LinkedIn</a> or via <a href="mailto:gsbhatkar@gmail.com">email</a>.</p>
-</section>
-<footer>
-    <p>&copy; 2024 Your Name. All Rights Reserved.</p>
-</footer>
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="projects/project1-edge-detection.html">Edge Detection and Filtering</a></li>
+            <li><a href="projects/project2-object-tracking.html">Object Tracking</a></li>
+            <li><a href="projects/project3-2d-pathfinding.html">2D Pathfinding</a></li>
+            <li><a href="projects/project4-2d-slam-simulation.html">2D SLAM Simulation</a></li>
+            <li><a href="projects/project5-obstacle-avoidance-simulation.html">Obstacle Avoidance Simulation</a></li>
+            <li><a href="projects/project6-real-time-slam.html">Real-Time SLAM</a></li>
+            <li><a href="projects/project7-dynamic-pathfinding.html">Dynamic Pathfinding</a></li>
+            <li><a href="projects/project8-follow-me-mode.html">Follow-Me Mode</a></li>
+            <li><a href="projects/project9-advanced-slam.html">Advanced SLAM</a></li>
+            <li><a href="projects/project10-robot-navigation.html">Robot Navigation</a></li>
+        </ul>
+
+        <h2>Contact</h2>
+        <p>Feel free to connect with me on <a href="https://www.linkedin.com">LinkedIn</a> or via <a href="mailto:your-email@example.com">email</a>.</p>
+    </section>
+</body>
+</html>
