--- a/index.html
+++ b/index.html
@@ -4,32 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Robotics Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: #f4f4f9;
+            color: #333;
+        }
+        header {
+            background: #222;
+            color: #fff;
+            padding: 20px 40px;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background: #333;
+            padding: 10px 0;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+            font-size: 18px;
+        }
+        nav a:hover {
+            background: #444;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+        h1, h2, h3 {
+            color: #444;
+        }
+        .projects img {
+            width: 100%;
+            max-height: 200px;
+            object-fit: cover;
+            border-radius: 5px;
+        }
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 15px;
+            margin: 20px 0;
+        }
+        .skill {
+            text-align: center;
+            padding: 10px;
+            background: #222;
+            color: #fff;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background: #333;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Welcome to My Robotics Portfolio</h1>
+        <p>Showcasing my journey from Embedded Systems to Robotics Software Development.</p>
     </header>
-    <section>
+
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#embedded-projects">Embedded Projects</a>
+        <a href="#robotics-projects">Robotics Projects</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <div class="container" id="about">
         <h2>About Me</h2>
-        <p>I'm a robotics enthusiast specializing in computer vision, SLAM, and autonomous systems. I enjoy learning through hands-on projects and building innovative solutions.</p>
+        <p>
+            Hello, I'm [Your Name]. With over 7 years of experience in embedded systems, I have worked on a wide range of projects, including hardware interfacing, real-time systems, and sensor integration.
+            Currently, I am transitioning to robotics software development, focusing on SLAM, pathfinding, and computer vision.
+        </p>
+    </div>
 
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="projects/project1-edge-detection.html">Edge Detection and Filtering</a></li>
-            <li><a href="projects/project2-object-tracking.html">Object Tracking</a></li>
-            <li><a href="projects/project3-2d-pathfinding.html">2D Pathfinding</a></li>
-            <li><a href="projects/project4-2d-slam-simulation.html">2D SLAM Simulation</a></li>
-            <li><a href="projects/project5-obstacle-avoidance-simulation.html">Obstacle Avoidance Simulation</a></li>
-            <li><a href="projects/project6-real-time-slam.html">Real-Time SLAM</a></li>
-            <li><a href="projects/project7-dynamic-pathfinding.html">Dynamic Pathfinding</a></li>
-            <li><a href="projects/project8-follow-me-mode.html">Follow-Me Mode</a></li>
-            <li><a href="projects/project9-advanced-slam.html">Advanced SLAM</a></li>
-            <li><a href="projects/project10-robot-navigation.html">Robot Navigation</a></li>
-        </ul>
+    <div class="container section" id="embedded-projects">
+        <h2>Embedded Systems Projects</h2>
+        <div class="projects">
+            <h3>1. Real-Time Motor Control</h3>
+            <p>Description: Developed firmware for BLDC motor control using STM32 and CAN communication.</p>
+            <a href="projects/real-time-motor-control.html" target="_blank">Learn More</a>
+            
+            <h3>2. IoT Sensor Network</h3>
+            <p>Description: Designed and implemented an IoT-based sensor network for real-time data collection.</p>
+            <a href="projects/iot-sensor-network.html" target="_blank">Learn More</a>
+        </div>
+    </div>
 
+    <div class="container section" id="robotics-projects">
+        <h2>Robotics Projects</h2>
+        <div class="projects">
+            <h3>1. SLAM Navigation</h3>
+            <p>Description: Implemented SLAM for autonomous navigation in unknown terrains using ROS and Python.</p>
+            <a href="projects/slam-navigation.html" target="_blank">Learn More</a>
+
+            <h3>2. Follow-Me Robot</h3>
+            <p>Description: Created a robot that uses computer vision to follow a person in real time.</p>
+            <a href="projects/follow-me-robot.html" target="_blank">Learn More</a>
+        </div>
+    </div>
+
+    <div class="container section" id="skills">
+        <h2>Skills</h2>
+        <div class="skills-grid">
+            <div class="skill">Embedded Systems</div>
+            <div class="skill">STM32</div>
+            <div class="skill">Python</div>
+            <div class="skill">C/C++</div>
+            <div class="skill">ROS</div>
+            <div class="skill">Computer Vision</div>
+            <div class="skill">Real-Time Systems</div>
+            <div class="skill">CAN Communication</div>
+        </div>
+    </div>
+
+    <div class="container section" id="contact">
         <h2>Contact</h2>
-        <p>Feel free to connect with me on <a href="https://www.linkedin.com">LinkedIn</a> or via <a href="mailto:your-email@example.com">email</a>.</p>
-    </section>
+        <p>Feel free to reach out to discuss robotics projects or career opportunities.</p>
+        <div class="contact">
+            <ul>
+                <li>Email: [YourEmail@example.com]</li>
+                <li>GitHub: <a href="https://github.com/YourGitHubUsername" target="_blank">github.com/YourGitHubUsername</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/YourLinkedInProfile" target="_blank">linkedin.com/in/YourLinkedInProfile</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 [Your Name]. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
