--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
     <div class="container section" id="skills">
         <h2>Skills</h2>
         <div class="skills-grid">
-            <div class="skill">Embedded Systems</div>
-            <div class="skill">STM32</div>
+            <div class="skill">Programming and debugging</div>
             <div class="skill">Python</div>
             <div class="skill">C/C++</div>
-            <div class="skill">ROS</div>
+            <div class="skill">Schematic design and reading </div>
+            <div class="skill">Circuit design</div>
             <div class="skill">Computer Vision</div>
-            <div class="skill">Real-Time Systems</div>
+            <div class="skill">UART, SPI, I2C, RS232, RS485, Modbus</div>
             <div class="skill">CAN Communication</div>
         </div>
     </div>
@@ -139,7 +139,7 @@
         <p>Feel free to reach out to discuss robotics projects or career opportunities.</p>
         <div class="contact">
             <ul>
-                <li>Email: [YourEmail@example.com]</li>
+                <li>Email: gsbhatkar@gmail.com </li>
                 <li>GitHub: <a href="https://github.com/YourGitHubUsername" target="_blank">github.com/YourGitHubUsername</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/in/YourLinkedInProfile" target="_blank">linkedin.com/in/YourLinkedInProfile</a></li>
             </ul>
