--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <a href="#about">About Me</a>
         <a href="#embedded-projects">Embedded Projects</a>
         <a href="#robotics-projects">Robotics Projects</a>
+        <a href="#python-projects">Python Projects</a>
         <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
     </nav>
@@ -119,7 +120,20 @@
             <a href="projects/follow-me-robot.html" target="_blank">Learn More</a>
         </div>
     </div>
+    
+    <div class="container section" id="python-projects">
+        <h2>Python Projects</h2>
+        <div class="projects">
+            <h3>1. Image Processing with OpenCV</h3>
+            <p>Description: Developed Python scripts to analyze and process images using OpenCV for object detection and tracking.</p>
+            <a href="projects/image-processing-opencv.html" target="_blank">Learn More</a>
 
+            <h3>2. Maze Solver with Pathfinding</h3>
+            <p>Description: Created an A* algorithm-based Python program to solve mazes and visualize paths in real time.</p>
+            <a href="projects/maze-solver-pathfinding.html" target="_blank">Learn More</a>
+        </div>
+    </div>
+    
     <div class="container section" id="skills">
         <h2>Skills</h2>
         <div class="skills-grid">
