--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
             Hello, I'm [Your Name]. With over 7 years of experience in embedded systems, I have worked on a wide range of projects, including hardware interfacing, real-time systems, and sensor integration.
             Currently, I am transitioning to robotics software development, focusing on SLAM, pathfinding, and computer vision.
         </p>
+        <p>
+        Want to learn more about my background? <a href="resume.html" target="_blank">View My Resume</a>.
+        </p>
     </div>
 
     <div class="container section" id="embedded-projects">
