--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,169 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+        .header {
+            text-align: center;
+            padding-bottom: 20px;
+            border-bottom: 2px solid #007BFF;
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 2.5em;
+            color: #007BFF;
+        }
+        .header p {
+            margin: 5px 0;
+        }
+        .header a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        .header a:hover {
+            text-decoration: underline;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section h2 {
+            font-size: 1.5em;
+            color: #007BFF;
+            margin-bottom: 10px;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 5px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        ul li {
+            margin-bottom: 10px;
+        }
+        ul li strong {
+            color: #333;
+        }
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        .skills span {
+            background-color: #007BFF;
+            color: white;
+            padding: 5px 10px;
+            border-radius: 20px;
+            font-size: 0.9em;
+        }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h1>Your Name</h1>
+            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a> | Phone: +123 456 7890</p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a> | GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+        </div>
+
+        <div class="section">
+            <h2>Objective</h2>
+            <p>A brief statement about your career goals and what you aim to achieve in your professional life.</p>
+        </div>
+
+        <div class="section">
+            <h2>Education</h2>
+            <ul>
+                <li>
+                    <strong>Bachelor of Science in Computer Science</strong> – XYZ University<br>
+                    <em>Graduated: 2020</em><br>
+                    Relevant coursework: Data Structures, Machine Learning, Robotics.
+                </li>
+                <li>
+                    <strong>High School Diploma</strong> – ABC School<br>
+                    <em>Graduated: 2016</em>
+                </li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Experience</h2>
+            <ul>
+                <li>
+                    <strong>Software Engineer</strong> – TechCorp Inc.<br>
+                    <em>2021 – Present</em><br>
+                    Developed automation tools and collaborated with the robotics team to integrate computer vision systems.
+                </li>
+                <li>
+                    <strong>Intern</strong> – Innovate Labs<br>
+                    <em>2020 – 2021</em><br>
+                    Assisted in designing AI models for pathfinding in autonomous robots.
+                </li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Projects</h2>
+            <ul>
+                <li>
+                    <strong>Autonomous Delivery Robot</strong><br>
+                    Designed and implemented a SLAM-based navigation system for a delivery robot using ROS and LiDAR.
+                </li>
+                <li>
+                    <strong>Follow-Me Robot</strong><br>
+                    Built a robot that autonomously follows a person using Python and OpenCV for real-time object tracking.
+                </li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Skills</h2>
+            <div class="skills">
+                <span>Python</span>
+                <span>C</span>
+                <span>Computer Vision</span>
+                <span>SLAM</span>
+                <span>Embedded Systems</span>
+                <span>Robotics</span>
+                <span>Path Planning</span>
+            </div>
+        </div>
+
+        <div class="section">
+            <h2>Achievements</h2>
+            <ul>
+                <li>Awarded “Best Robotics Project” at XYZ Hackathon 2021.</li>
+                <li>Published research on autonomous navigation in <em>International Robotics Journal</em>.</li>
+            </ul>
+        </div>
+    </div>
+
+    <footer>
+        &copy; 2024 Your Name | Built with HTML & CSS
+    </footer>
+</body>
+</html>
