--- a/index.html
+++ b/index.html
@@ -99,17 +99,50 @@
     </div>
 
     <div class="container section" id="embedded-projects">
-        <h2>Embedded Systems Projects</h2>
-        <div class="projects">
-            <h3>1. Real-Time Motor Control</h3>
-            <p>Description: Developed firmware for BLDC motor control using STM32 and CAN communication.</p>
-            <a href="projects/real-time-motor-control.html" target="_blank">Learn More</a>
-            
-            <h3>2. IoT Sensor Network</h3>
-            <p>Description: Designed and implemented an IoT-based sensor network for real-time data collection.</p>
-            <a href="projects/iot-sensor-network.html" target="_blank">Learn More</a>
-        </div>
+    <h2>Embedded Systems Projects</h2>
+    <div class="projects">
+        <h3>1. 3-Phase Servo Stabilizer</h3>
+        <p>
+            Description: Designed and developed firmware for a servo stabilizer system, ensuring real-time control and protection for 3-phase electrical loads.
+        </p>
+
+        <h3>2. LOP and COP Display Unit</h3>
+        <p>
+            Description: Engineered control and communication protocols for Lift Operating Panel (LOP) and Car Operating Panel (COP) display systems, enabling seamless interaction and information sharing.
+        </p>
+       
+        <h3>3. LOP-COP Communication Unit</h3>
+        <p>
+            Description: Developed a robust communication interface between LOP and COP units, ensuring reliable data exchange in elevator systems.
+        </p>
+
+        <h3>4. DMX Controller Slave Unit</h3>
+        <p>
+            Description: Created a DMX-compliant slave unit for lighting systems, ensuring synchronized operation with master controllers in dynamic environments.
+        </p>
+
+        <h3>5. Music System for Lift</h3>
+        <p>
+            Description: Designed and integrated an embedded music system for elevators, featuring high-quality audio playback and user-configurable options.
+        </p>
+
+        <h3>6. Floor Annunciator for Lift</h3>
+        <p>
+            Description: Developed a floor annunciator system for elevators to display floor information with high accuracy and real-time updates.
+        </p>
+
+        <h3>7. CO2 Insufflator with Touch Screen Display</h3>
+        <p>
+            Description: Designed the software for a CO2 insufflator medical device, incorporating a touch-screen user interface for precise control and monitoring.
+        </p>
+
+        <h3>8. Electro-Cautery Surgical Machine</h3>
+        <p>
+            Description: Developed the firmware for an electro-cautery surgical device, ensuring high precision and safety in medical procedures.
+        </p>
     </div>
+</div>
+
 
     <div class="container section" id="robotics-projects">
         <h2>Robotics Projects</h2>
