--- a/resume.html
+++ b/resume.html
@@ -86,8 +86,8 @@
     <div class="container">
         <div class="header">
             <h1>Your Name</h1>
-            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a> | Phone: +123 456 7890</p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a> | GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+            <p>Email: <a href="mailto:gsbhatkar@gmail.com">gsbhatkar@gmail.com</a> | Phone: +91 8454928405</p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a> | GitHub: <a href="https://github.com/GaneshBhatkar/GaneshBhatkar.github.io" target="_blank">github.com/GaneshBhatkar/GaneshBhatkar.github.io</a></p>
         </div>
 
         <div class="section">
