--- a/resume.html
+++ b/resume.html
@@ -85,9 +85,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Your Name</h1>
+            <h1>Ganesh Bhatkar</h1>
             <p>Email: <a href="mailto:gsbhatkar@gmail.com">gsbhatkar@gmail.com</a> | Phone: +91 8454928405</p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a> | GitHub: <a href="https://github.com/GaneshBhatkar/GaneshBhatkar.github.io" target="_blank">github.com/GaneshBhatkar/GaneshBhatkar.github.io</a></p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a> | GitHub: <a href="https://github.com/GaneshBhatkar/GaneshBhatkar.github.io" target="_blank">github.com/GaneshBhatkar</a></p>
         </div>
 
         <div class="section">
