--- a/index.html
+++ b/index.html
@@ -147,13 +147,9 @@
     <div class="container section" id="robotics-projects">
         <h2>Robotics Projects</h2>
         <div class="projects">
-            <h3>1. SLAM Navigation</h3>
-            <p>Description: Implemented SLAM for autonomous navigation in unknown terrains using ROS and Python.</p>
-            <a href="projects/slam-navigation.html" target="_blank">Learn More</a>
-
-            <h3>2. Follow-Me Robot</h3>
-            <p>Description: Created a robot that uses computer vision to follow a person in real time.</p>
-            <a href="projects/follow-me-robot.html" target="_blank">Learn More</a>
+            h3>1. My ROS Journey</h3>
+        <p>Description: Documenting my learning path, hands-on projects, and experiments with ROS and ROS 2.</p>
+        <a href="projects/ros-journey.html" target="_blank">View My ROS Journey</a>
         </div>
     </div>
     
