--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="projects">
             h3>1. My ROS Journey</h3>
         <p>Description: Documenting my learning path, hands-on projects, and experiments with ROS and ROS 2.</p>
-        <a href="projects/ros-journey.html" target="_blank">View My ROS Journey</a>
+        <a href="ros-journey.html" target="_blank">View My ROS Journey</a>
         </div>
     </div>
     
