--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="container section" id="robotics-projects">
         <h2>Robotics Projects</h2>
         <div class="projects">
-            h3>1. My ROS Journey</h3>
+           <h3>1. My ROS Journey</h3>
         <p>Description: Documenting my learning path, hands-on projects, and experiments with ROS and ROS 2.</p>
         <a href="ros-journey.html" target="_blank">View My ROS Journey</a>
         </div>
