--- a/index.html
+++ b/index.html
@@ -59,19 +59,6 @@
       margin-right: auto;
     }
 
-    .cta-btn {
-      background-color: #0a9396;
-      color: #fefae0;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      cursor: pointer;
-      margin-top: 20px;
-      text-decoration: none;
-      display: inline-block;
-    }
-
     .section {
       background-color: #e0e8ec;
       padding: 40px 20px;
@@ -126,15 +113,14 @@
   <section class="hero">
     <h1>From Embedded Systems to Robotics</h1>
     <p>
-      I'm an Embedded Systems Engineer with 5+ years of experience building real-time systems for industrial and medical domains. Currently, I'm developing a Modular UGV using ROS 2 and Edge-AI, aiming to solve real-world problems in urban mobility and disaster response.
+      I’m an Embedded Systems Engineer with over 5 years of experience in firmware development and hardware-software integration. Currently transitioning to robotics with a focus on modular UGVs using ROS 2 and Edge-AI.
     </p>
-    <a href="projects.html" class="cta-btn">View My Projects</a>
   </section>
 
   <section class="section">
     <h2>About Me</h2>
     <p>
-      I hold a Master's in Embedded Systems from BITS Pilani (WILP), and a Bachelor's in Electronics & Telecommunication. I’m now focusing on AI-enabled robotics for smart cities. My goal is to pursue a Master's in Robotics in Japan and contribute to advanced autonomous systems and real-world robotic deployment.
+      With a Master’s in Embedded Systems and a Bachelor's in Electronics, I’ve led projects in industrial and medical automation. My current focus is robotics for smart cities and urban mobility. I aim to pursue a Master’s in Robotics in Japan to expand into AI-powered autonomous systems.
     </p>
   </section>
 
