--- a/resume.html
+++ b/resume.html
@@ -115,7 +115,7 @@
 
     <!-- Embed the PDF -->
     <div class="pdf-container">
-      <iframe src="CV_Ganesh_Bhatkar.pdf" title="Ganesh Bhatkar Resume PDF"></iframe>
+      <iframe src="Ganesh_Bhatkar.pdf" title="Ganesh Bhatkar Resume PDF"></iframe>
     </div>
 
     <!-- Download Button -->
