--- a/projects.html
+++ b/projects.html
@@ -45,19 +45,78 @@
     }
 
     .section {
-      margin-bottom: 40px;
+      margin-bottom: 60px;
     }
 
     .section h2 {
       color: #0a9396;
       border-bottom: 2px solid #94d2bd;
       padding-bottom: 10px;
+      margin-bottom: 20px;
     }
 
     .placeholder {
       font-style: italic;
       color: #555;
       margin-top: 10px;
+    }
+
+    .tabs {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+    }
+
+    .tab-button {
+      background-color: #94d2bd;
+      border: none;
+      padding: 10px 18px;
+      font-weight: 600;
+      color: #005f73;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    .tab-button:hover,
+    .tab-button.active {
+      background-color: #0a9396;
+      color: #fefae0;
+    }
+
+    .project-content {
+      background-color: #e0f1f1;
+      border-radius: 8px;
+      padding: 20px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.05);
+    }
+
+    .project-title {
+      font-size: 1.3rem;
+      font-weight: 700;
+      margin-bottom: 10px;
+      color: #005f73;
+    }
+
+    .project-desc {
+      margin-bottom: 15px;
+    }
+
+    .github-link {
+      font-weight: 600;
+      color: #0a9396;
+      text-decoration: none;
+      border: 1px solid #0a9396;
+      padding: 6px 12px;
+      border-radius: 5px;
+      transition: all 0.3s ease;
+      display: inline-block;
+    }
+
+    .github-link:hover {
+      background-color: #0a9396;
+      color: #fefae0;
     }
 
     footer {
@@ -99,7 +158,41 @@
 
     <div class="section">
       <h2>🐍 Python Projects</h2>
-      <p class="placeholder">Projects coming soon...</p>
+
+      <div class="tabs">
+        <button class="tab-button active" onclick="showProject('p1', this)">Modbus-Terminal</button>
+        <button class="tab-button" onclick="showProject('p2', this)">Web Scraper</button>
+        <button class="tab-button" onclick="showProject('p3', this)">Chatbot</button>
+        <button class="tab-button" onclick="showProject('p4', this)">Automation Script</button>
+      </div>
+
+      <div id="p1" class="project-content">
+        <div class="project-title">Modbus-Terminal</div>
+        <div class="project-desc">Python terminal tool for analyzing modbus slave data over TCP or RTU connection.
+            </div>
+        <br><br>
+    📺 <a href="https://youtu.be/q5H6agDDBCQ" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
+  </div>
+  <a href="https://github.com/GaneshBhatkar/Modbus-Terminal" target="_blank" class="github-link">View on GitHub</a>
+      </div>
+
+      <div id="p2" class="project-content" style="display: none;">
+        <div class="project-title">Web Scraper</div>
+        <div class="project-desc">A flexible Python scraper that extracts data from e-commerce sites using BeautifulSoup and handles pagination.</div>
+        <a href="https://github.com/yourusername/project2" target="_blank" class="github-link">View on GitHub</a>
+      </div>
+
+      <div id="p3" class="project-content" style="display: none;">
+        <div class="project-title">Chatbot</div>
+        <div class="project-desc">An interactive chatbot built using NLTK and custom logic for intelligent customer support automation.</div>
+        <a href="https://github.com/yourusername/project3" target="_blank" class="github-link">View on GitHub</a>
+      </div>
+
+      <div id="p4" class="project-content" style="display: none;">
+        <div class="project-title">Automation Script</div>
+        <div class="project-desc">A powerful script that organizes files and automates daily backup tasks using Python's os and shutil libraries.</div>
+        <a href="https://github.com/yourusername/project4" target="_blank" class="github-link">View on GitHub</a>
+      </div>
     </div>
 
     <div class="section">
@@ -112,6 +205,26 @@
   <footer>
     <p>© 2025 Ganesh Bhatkar | <a style="color: #fefae0;" href="mailto:gsbhatkar@gmail.com">gsbhatkar@gmail.com</a></p>
   </footer>
+
+  <script>
+    function showProject(id, button) {
+      // Hide all content divs
+      document.querySelectorAll('.project-content').forEach(el => {
+        el.style.display = 'none';
+      });
+
+      // Show selected
+      document.getElementById(id).style.display = 'block';
+
+      // Remove active from all tabs
+      document.querySelectorAll('.tab-button').forEach(btn => {
+        btn.classList.remove('active');
+      });
+
+      // Set current tab active
+      button.classList.add('active');
+    }
+  </script>
 
 </body>
 </html>
