--- a/projects.html
+++ b/projects.html
@@ -176,17 +176,20 @@
   </div>
   
 
+      
 
       <div id="p2" class="project-content" style="display: none;">
-        <div class="project-title">Web Scraper</div>
-        <div class="project-desc">A flexible Python scraper that extracts data from e-commerce sites using BeautifulSoup and handles pagination.</div>
-        <a href="https://github.com/yourusername/project2" target="_blank" class="github-link">View on GitHub</a>
+        <div class="project-title">Calculator </div>
+        <div class="project-desc">Simple python & QT GUI based calculator .</div>
+        <br><br>
+    📺 <a href="https://youtube.com/shorts/fBaEg7bXjB8" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
+        <a href="https://github.com/GaneshBhatkar/Calculator.git " target="_blank" class="github-link">View on GitHub</a>
       </div>
 
       <div id="p3" class="project-content" style="display: none;">
-        <div class="project-title">Chatbot</div>
-        <div class="project-desc">An interactive chatbot built using NLTK and custom logic for intelligent customer support automation.</div>
-        <a href="https://github.com/yourusername/project3" target="_blank" class="github-link">View on GitHub</a>
+        <div class="project-title">Currancy Convetor</div>
+        <div class="project-desc">currancy convertor using python.</div>
+        <a href=" https://github.com/GaneshBhatkar/Currency-Convertor_1.git " target="_blank" class="github-link">View on GitHub</a>
       </div>
 
       <div id="p4" class="project-content" style="display: none;">
