--- a/projects.html
+++ b/projects.html
@@ -161,8 +161,8 @@
 
       <div class="tabs">
         <button class="tab-button active" onclick="showProject('p1', this)">Modbus-Terminal</button>
-        <button class="tab-button" onclick="showProject('p2', this)">Web Scraper</button>
-        <button class="tab-button" onclick="showProject('p3', this)">Chatbot</button>
+        <button class="tab-button" onclick="showProject('p2', this)">Calculator</button>
+        <button class="tab-button" onclick="showProject('p3', this)">Currancy Convertor</button>
         <button class="tab-button" onclick="showProject('p4', this)">Automation Script</button>
       </div>
 
@@ -187,7 +187,7 @@
       </div>
 
       <div id="p3" class="project-content" style="display: none;">
-        <div class="project-title">Currancy Convetor</div>
+        <div class="project-title">Currancy Convertor</div>
         <div class="project-desc">currancy convertor using python.</div>
         <a href=" https://github.com/GaneshBhatkar/Currency-Convertor_1.git " target="_blank" class="github-link">View on GitHub</a>
       </div>
