--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <section class="section">
     <h2>About Me</h2>
     <p>
-      With a Master’s in Embedded Systems and a Bachelor's in Electronics, I’ve led projects in industrial and medical automation. My current focus is robotics for smart cities and urban mobility. I aim to pursue a Master’s in Robotics in Japan to expand into AI-powered autonomous systems.
+      With a Master’s in Embedded Systems and a Bachelor's in Electronics, I’ve led projects in industrial and medical automation. My current focus is robotics for smart cities and urban mobility. I aim to pursue a Master’s in Robotics to expand into AI-powered autonomous systems.
     </p>
   </section>
 
