--- a/projects.html
+++ b/projects.html
@@ -163,7 +163,7 @@
         <button class="tab-button active" onclick="showProject('p1', this)">Modbus-Terminal</button>
         <button class="tab-button" onclick="showProject('p2', this)">Calculator</button>
         <button class="tab-button" onclick="showProject('p3', this)">Currancy Convertor</button>
-        <button class="tab-button" onclick="showProject('p4', this)">Automation Script</button>
+        <button class="tab-button" onclick="showProject('p4', this)">coming soon</button>
       </div>
 
       <div id="p1" class="project-content">
@@ -193,8 +193,8 @@
       </div>
 
       <div id="p4" class="project-content" style="display: none;">
-        <div class="project-title">Automation Script</div>
-        <div class="project-desc">A powerful script that organizes files and automates daily backup tasks using Python's os and shutil libraries.</div>
+        <div class="project-title">coming soon </div>
+        <div class="project-desc">coming soon....</div>
         <a href="https://github.com/yourusername/project4" target="_blank" class="github-link">View on GitHub</a>
       </div>
     </div>
