--- a/projects.html
+++ b/projects.html
@@ -154,6 +154,7 @@
     <div class="section">
       <h2>🖼️ Image Processing Projects</h2>
       <div class="tabs">
+        <button class="tab-button active" onclick="showProject('ip_0', this)">Webcam Basics</button>
         <button class="tab-button active" onclick="showProject('ip1', this)">Lane Detection</button>
         <button class="tab-button" onclick="showProject('ip2', this)">Vehicle Detection</button>
         <button class="tab-button" onclick="showProject('ip3', this)">Number Plate Recognition</button>
@@ -164,6 +165,12 @@
         <button class="tab-button" onclick="showProject('ip8', this)">Motion Detection</button>
       </div>
 
+    <div id="ip1" class="project-content">
+      <div class="project-title">Webcam Basics</div>
+      <div class="project-desc">Real-Time Video Frame Reading with OpenCV.</div>
+      <a href="https://github.com/GaneshBhatkar/Lane-Detection" target="_blank" class="github-link">View on GitHub</a>
+    </div>
+      
         <!-- Project 1 -->
     <div id="ip1" class="project-content">
       <div class="project-title">Lane Detection</div>
