--- a/projects.html
+++ b/projects.html
@@ -165,7 +165,7 @@
         <button class="tab-button" onclick="showProject('ip8', this)">Motion Detection</button>
       </div>
 
-    <div id="ip1" class="project-content">
+    <div id="ip_0" class="project-content">
       <div class="project-title">Webcam Basics</div>
       <div class="project-desc">Real-Time Video Frame Reading with OpenCV.</div>
       <a href="https://github.com/GaneshBhatkar/Lane-Detection" target="_blank" class="github-link">View on GitHub</a>
