--- a/projects.html
+++ b/projects.html
@@ -154,74 +154,74 @@
     <div class="section">
       <h2>🖼️ Image Processing Projects</h2>
       <div class="tabs">
-        <button class="tab-button active" onclick="showProject('ip_0', this)">Webcam Basics</button>
-        <button class="tab-button active" onclick="showProject('ip1', this)">Lane Detection</button>
-        <button class="tab-button" onclick="showProject('ip2', this)">Vehicle Detection</button>
-        <button class="tab-button" onclick="showProject('ip3', this)">Number Plate Recognition</button>
-        <button class="tab-button" onclick="showProject('ip4', this)">YOLOv8 Object Detection</button>
-        <button class="tab-button" onclick="showProject('ip5', this)">Face Detection</button>
-        <button class="tab-button" onclick="showProject('ip6', this)">Hand Gesture Recognition</button>
-        <button class="tab-button" onclick="showProject('ip7', this)">Color Tracking</button>
-        <button class="tab-button" onclick="showProject('ip8', this)">Motion Detection</button>
+        <button class="tab-button active" onclick="showProject('ip1', this)">Webcam Basics</button>
+        <button class="tab-button active" onclick="showProject('ip2', this)">Lane Detection</button>
+        <button class="tab-button" onclick="showProject('ip3', this)">Vehicle Detection</button>
+        <button class="tab-button" onclick="showProject('ip4', this)">Number Plate Recognition</button>
+        <button class="tab-button" onclick="showProject('ip5', this)">YOLOv8 Object Detection</button>
+        <button class="tab-button" onclick="showProject('ip6', this)">Face Detection</button>
+        <button class="tab-button" onclick="showProject('ip7', this)">Hand Gesture Recognition</button>
+        <button class="tab-button" onclick="showProject('ip9', this)">Color Tracking</button>
+        <button class="tab-button" onclick="showProject('ip10', this)">Motion Detection</button>
       </div>
 
-    <div id="ip_0" class="project-content">
+    <div id="ip1" class="project-content">
       <div class="project-title">Webcam Basics</div>
       <div class="project-desc">Real-Time Video Frame Reading with OpenCV.</div>
       <a href="https://github.com/GaneshBhatkar/Lane-Detection" target="_blank" class="github-link">View on GitHub</a>
     </div>
       
         <!-- Project 1 -->
-    <div id="ip1" class="project-content">
+    <div id="ip2" class="project-content">
       <div class="project-title">Lane Detection</div>
       <div class="project-desc">Detects lanes using OpenCV with edge detection and masking.</div>
       <a href="https://github.com/GaneshBhatkar/Lane-Detection" target="_blank" class="github-link">View on GitHub</a>
     </div>
   
-    <!-- Project 2 -->
-    <div id="ip2" class="project-content" style="display: none;">
+    <!-- Project 3 -->
+    <div id="ip3" class="project-content" style="display: none;">
       <div class="project-title">Vehicle Detection</div>
       <div class="project-desc">Detects vehicles using Haar cascades and YOLO models.</div>
       <a href="https://github.com/GaneshBhatkar/Vehicle-Detection" target="_blank" class="github-link">View on GitHub</a>
     </div>
   
-    <!-- Project 3 -->
-    <div id="ip3" class="project-content" style="display: none;">
+    <!-- Project 4 -->
+    <div id="ip4" class="project-content" style="display: none;">
       <div class="project-title">Number Plate Recognition</div>
       <div class="project-desc">Automatic number plate recognition using OpenCV and Tesseract OCR.</div>
       <a href="https://github.com/GaneshBhatkar/ANPR" target="_blank" class="github-link">View on GitHub</a>
     </div>
   
-    <!-- Project 4 -->
-    <div id="ip4" class="project-content" style="display: none;">
+    <!-- Project 5 -->
+    <div id="ip5" class="project-content" style="display: none;">
       <div class="project-title">YOLOv8 Object Detection</div>
       <div class="project-desc">Real-time object detection using YOLOv8 and live camera feed.</div>
       <a href="https://github.com/GaneshBhatkar/YOLOv8-Detection" target="_blank" class="github-link">View on GitHub</a>
     </div>
   
-    <!-- Project 5 -->
-    <div id="ip5" class="project-content" style="display: none;">
+    <!-- Project 6 -->
+    <div id="ip6" class="project-content" style="display: none;">
       <div class="project-title">Face Detection</div>
       <div class="project-desc">Detects human faces using OpenCV's Haar cascade classifier.</div>
       <a href="https://github.com/GaneshBhatkar/Face-Detection" target="_blank" class="github-link">View on GitHub</a>
     </div>
   
-    <!-- Project 6 -->
-    <div id="ip6" class="project-content" style="display: none;">
+    <!-- Project 7 -->
+    <div id="ip7" class="project-content" style="display: none;">
       <div class="project-title">Hand Gesture Recognition</div>
       <div class="project-desc">Recognizes hand gestures using contour detection and convex hulls.</div>
       <a href="https://github.com/GaneshBhatkar/Hand-Gesture" target="_blank" class="github-link">View on GitHub</a>
     </div>
   
-    <!-- Project 7 -->
-    <div id="ip7" class="project-content" style="display: none;">
+    <!-- Project 8 -->
+    <div id="ip8" class="project-content" style="display: none;">
       <div class="project-title">Color Tracking</div>
       <div class="project-desc">Tracks specific colors in real time using HSV filters.</div>
       <a href="https://github.com/GaneshBhatkar/Color-Tracking" target="_blank" class="github-link">View on GitHub</a>
     </div>
   
-    <!-- Project 8 -->
-    <div id="ip8" class="project-content" style="display: none;">
+    <!-- Project 9 -->
+    <div id="ip9" class="project-content" style="display: none;">
       <div class="project-title">Motion Detection</div>
       <div class="project-desc">Detects motion changes using frame differencing in OpenCV.</div>
       <a href="https://github.com/GaneshBhatkar/Motion-Detection" target="_blank" class="github-link">View on GitHub</a>
