--- a/projects.html
+++ b/projects.html
@@ -172,7 +172,7 @@
     </div>
       
         <!-- Project 1 -->
-    <div id="ip2" class="project-content">
+    <div id="ip2" class="project-content" style="display: none;">
       <div class="project-title">Lane Detection</div>
       <div class="project-desc">Detects lanes using OpenCV with edge detection and masking.</div>
       <a href="https://github.com/GaneshBhatkar/Lane-Detection" target="_blank" class="github-link">View on GitHub</a>
