--- a/projects.html
+++ b/projects.html
@@ -154,9 +154,9 @@
     <div class="section">
       <h2>🖼️ Image Processing Projects</h2>
       <div class="tabs">
-        <button class="tab-button active" onclick="showProject('ip1', this)">Lane Detection</button>
-        <button class="tab-button" onclick="showProject('ip2', this)">Vehicle Detection</button>
-        <button class="tab-button" onclick="showProject('ip3', this)">Number Plate Recognition</button>
+        <button class="tab-button active" onclick="showProject('ip1', this)">Webcam Basics</button>
+        <button class="tab-button" onclick="showProject('ip2', this)">Grayscale Blurring</button>
+        <button class="tab-button" onclick="showProject('ip3', this)">Canny Edge Detector</button>
         <button class="tab-button" onclick="showProject('ip4', this)">YOLOv8 Object Detection</button>
         <button class="tab-button" onclick="showProject('ip5', this)">Face Detection</button>
         <button class="tab-button" onclick="showProject('ip6', this)">Hand Gesture Recognition</button>
@@ -164,24 +164,25 @@
         <button class="tab-button" onclick="showProject('ip8', this)">Motion Detection</button>
       </div>
 
+
     <!-- Project 1 -->
   <div id="ip1" class="project-content">
-    <div class="project-title">Lane Detection</div>
-    <div class="project-desc">Detects lanes using OpenCV with edge detection and masking.</div>
+    <div class="project-title">Webcam Basics</div>
+    <div class="project-desc">Real-Time Video Frame Reading with OpenCV.</div>
     <a href="https://github.com/GaneshBhatkar/Lane-Detection" target="_blank" class="github-link">View on GitHub</a>
   </div>
 
   <!-- Project 2 -->
   <div id="ip2" class="project-content" style="display: none;">
-    <div class="project-title">Vehicle Detection</div>
-    <div class="project-desc">Detects vehicles using Haar cascades and YOLO models.</div>
+    <div class="project-title">Grayscale Blurring</div>
+    <div class="project-desc">Basic Image Preprocessing with OpenCV – Grayscale, Blur </div>
     <a href="https://github.com/GaneshBhatkar/Vehicle-Detection" target="_blank" class="github-link">View on GitHub</a>
   </div>
-
+03_Canny_Edge_Detector
   <!-- Project 3 -->
   <div id="ip3" class="project-content" style="display: none;">
-    <div class="project-title">Number Plate Recognition</div>
-    <div class="project-desc">Automatic number plate recognition using OpenCV and Tesseract OCR.</div>
+    <div class="project-title">Canny Edge Detector</div>
+    <div class="project-desc">Real-Time Edge Detection on Video Feed Using OpenCV.</div>
     <a href="https://github.com/GaneshBhatkar/ANPR" target="_blank" class="github-link">View on GitHub</a>
   </div>
 
