--- a/projects.html
+++ b/projects.html
@@ -169,56 +169,63 @@
   <div id="ip1" class="project-content">
     <div class="project-title">Webcam Basics</div>
     <div class="project-desc">Real-Time Video Frame Reading with OpenCV.</div>
-    <a href="https://github.com/GaneshBhatkar/Lane-Detection" target="_blank" class="github-link">View on GitHub</a>
+    <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/01_webcam_basics.py" target="_blank" class="github-link">View on GitHub</a>
+    📺 <a href="https://youtu.be/zE28FQhIUu4" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
 
   <!-- Project 2 -->
   <div id="ip2" class="project-content" style="display: none;">
     <div class="project-title">Grayscale Blurring</div>
     <div class="project-desc">Basic Image Preprocessing with OpenCV – Grayscale, Blur </div>
-    <a href="https://github.com/GaneshBhatkar/Vehicle-Detection" target="_blank" class="github-link">View on GitHub</a>
+    <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/02_Grayscale_Blurring.py" target="_blank" class="github-link">View on GitHub</a>
+    📺 <a href="https://youtu.be/35i23GERI1g" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
-03_Canny_Edge_Detector
-  <!-- Project 3 -->
+  <!-- Project 3  -->
   <div id="ip3" class="project-content" style="display: none;">
     <div class="project-title">Canny Edge Detector</div>
     <div class="project-desc">Real-Time Edge Detection on Video Feed Using OpenCV.</div>
-    <a href="https://github.com/GaneshBhatkar/ANPR" target="_blank" class="github-link">View on GitHub</a>
+    <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/03_Canny_Edge_Detector.py" target="_blank" class="github-link">View on GitHub</a>
+    📺 <a href="https://youtu.be/JuK82WOXZ_g" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
 
-  <!-- Project 4 -->
+  <!-- Project 4  -->
   <div id="ip4" class="project-content" style="display: none;">
     <div class="project-title">YOLOv8 Object Detection</div>
     <div class="project-desc">Real-time object detection using YOLOv8 and live camera feed.</div>
-    <a href="https://github.com/GaneshBhatkar/YOLOv8-Detection" target="_blank" class="github-link">View on GitHub</a>
+    <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/04_Color_Masking.py" target="_blank" class="github-link">View on GitHub</a>
+    📺 <a href="https://youtu.be/Zu-iJX2OPug" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
 
   <!-- Project 5 -->
   <div id="ip5" class="project-content" style="display: none;">
     <div class="project-title">Face Detection</div>
     <div class="project-desc">Detects human faces using OpenCV's Haar cascade classifier.</div>
-    <a href="https://github.com/GaneshBhatkar/Face-Detection" target="_blank" class="github-link">View on GitHub</a>
+    <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/05_Contours_box%20.py" target="_blank" class="github-link">View on GitHub</a>
+    📺 <a href="https://youtu.be/EyhnmjwB6Lc" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
 
   <!-- Project 6 -->
   <div id="ip6" class="project-content" style="display: none;">
     <div class="project-title">Hand Gesture Recognition</div>
     <div class="project-desc">Recognizes hand gestures using contour detection and convex hulls.</div>
-    <a href="https://github.com/GaneshBhatkar/Hand-Gesture" target="_blank" class="github-link">View on GitHub</a>
+    <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/06_Image_process.py" target="_blank" class="github-link">View on GitHub</a>
+    📺 <a href="https://youtu.be/LBlkcWXnMqc" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
 
   <!-- Project 7 -->
   <div id="ip7" class="project-content" style="display: none;">
     <div class="project-title">Color Tracking</div>
     <div class="project-desc">Tracks specific colors in real time using HSV filters.</div>
-    <a href="https://github.com/GaneshBhatkar/Color-Tracking" target="_blank" class="github-link">View on GitHub</a>
+    <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/07_object_tracking.py" target="_blank" class="github-link">View on GitHub</a>
+    📺 <a href="https://youtu.be/DkNv3nIzuVw" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
 
   <!-- Project 8 -->
   <div id="ip8" class="project-content" style="display: none;">
     <div class="project-title">Motion Detection</div>
     <div class="project-desc">Detects motion changes using frame differencing in OpenCV.</div>
-    <a href="https://github.com/GaneshBhatkar/Motion-Detection" target="_blank" class="github-link">View on GitHub</a>
+    <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/08_decision_logic.py" target="_blank" class="github-link">View on GitHub</a>
+    📺 <a href="https://youtu.be/tPTrgkY8Sl4" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
       
 </div>
