--- a/projects.html
+++ b/projects.html
@@ -157,11 +157,11 @@
         <button class="tab-button active" onclick="showProject('ip1', this)">Webcam Basics</button>
         <button class="tab-button" onclick="showProject('ip2', this)">Grayscale Blurring</button>
         <button class="tab-button" onclick="showProject('ip3', this)">Canny Edge Detector</button>
-        <button class="tab-button" onclick="showProject('ip4', this)">YOLOv8 Object Detection</button>
-        <button class="tab-button" onclick="showProject('ip5', this)">Face Detection</button>
-        <button class="tab-button" onclick="showProject('ip6', this)">Hand Gesture Recognition</button>
+        <button class="tab-button" onclick="showProject('ip4', this)">Color Masking</button>
+        <button class="tab-button" onclick="showProject('ip5', this)">Contours box</button>
+        <button class="tab-button" onclick="showProject('ip6', this)">Image process</button>
         <button class="tab-button" onclick="showProject('ip7', this)">Color Tracking</button>
-        <button class="tab-button" onclick="showProject('ip8', this)">Motion Detection</button>
+        <button class="tab-button" onclick="showProject('ip8', this)">decision logic</button>
       </div>
 
 
@@ -190,24 +190,24 @@
 
   <!-- Project 4  -->
   <div id="ip4" class="project-content" style="display: none;">
-    <div class="project-title">YOLOv8 Object Detection</div>
-    <div class="project-desc">Real-time object detection using YOLOv8 and live camera feed.</div>
+    <div class="project-title">Color Masking</div>
+    <div class="project-desc">Basic Demo video of capturing Video color masking and detection with OpenCV and python.</div>
     <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/04_Color_Masking.py" target="_blank" class="github-link">View on GitHub</a>
     📺 <a href="https://youtu.be/Zu-iJX2OPug" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
 
   <!-- Project 5 -->
   <div id="ip5" class="project-content" style="display: none;">
-    <div class="project-title">Face Detection</div>
-    <div class="project-desc">Detects human faces using OpenCV's Haar cascade classifier.</div>
+    <div class="project-title">Contours box</div>
+    <div class="project-desc">Basic Demo video of capturing Video applying Contour to color detected with OpenCV and python.</div>
     <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/05_Contours_box%20.py" target="_blank" class="github-link">View on GitHub</a>
     📺 <a href="https://youtu.be/EyhnmjwB6Lc" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
 
   <!-- Project 6 -->
   <div id="ip6" class="project-content" style="display: none;">
-    <div class="project-title">Hand Gesture Recognition</div>
-    <div class="project-desc">Recognizes hand gestures using contour detection and convex hulls.</div>
+    <div class="project-title">Image process</div>
+    <div class="project-desc">Basic Demo video of reading image and processing it with OpenCV and python.</div>
     <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/06_Image_process.py" target="_blank" class="github-link">View on GitHub</a>
     📺 <a href="https://youtu.be/LBlkcWXnMqc" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
@@ -215,15 +215,15 @@
   <!-- Project 7 -->
   <div id="ip7" class="project-content" style="display: none;">
     <div class="project-title">Color Tracking</div>
-    <div class="project-desc">Tracks specific colors in real time using HSV filters.</div>
+    <div class="project-desc">Basic Demo video of capturing Video capturing red boject and tracking it with OpenCV and python.</div>
     <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/07_object_tracking.py" target="_blank" class="github-link">View on GitHub</a>
     📺 <a href="https://youtu.be/DkNv3nIzuVw" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
 
   <!-- Project 8 -->
   <div id="ip8" class="project-content" style="display: none;">
-    <div class="project-title">Motion Detection</div>
-    <div class="project-desc">Detects motion changes using frame differencing in OpenCV.</div>
+    <div class="project-title">decision logic</div>
+    <div class="project-desc">Basic Demo video of capturing Video detecting red object and choosing direction with OpenCV and python.</div>
     <a href="https://github.com/GaneshBhatkar/Perception_Basics/blob/main/08_decision_logic.py" target="_blank" class="github-link">View on GitHub</a>
     📺 <a href="https://youtu.be/tPTrgkY8Sl4" target="_blank" class="github-link" style="display: inline-block; margin-right: 10px;">Watch Demo Video</a>
   </div>
